Bug 140252 - Form control is not in front of other shapes
Summary: Form control is not in front of other shapes
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium minor
Assignee: Regina Henschel
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-02-07 22:54 UTC by Regina Henschel
Modified: 2021-02-16 20:46 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2021-02-07 22:54:19 UTC
Open Calc. Insert a form control "Push Button". Insert a legacy rectangle so that it overlaps the button. Switch form to alive mode. The button comes to front. Because the button is a form control, it should be in front too in design mode.

Error is, that the button is not on the "controls" layer, when it is inserted.

Save and reopen the spreadsheet. Now the button is on top, in design mode and in alive mode as well. Opening the document repairs it.

I think, I have introduced the problem with fbc2b2d93a091c9dba26139878dd3d0acc5f31e9

I'll change "Controls" to "controls" in Calc.
Comment 1 Regina Henschel 2021-02-09 13:31:28 UTC
A default control, which is inserted via ctrl+click, has a wrong layer too.
Comment 2 Commit Notification 2021-02-10 12:15:10 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1d53f3709de2956f14db31677b6c461f33843bd9

tdf#140252 Controls in Calc are always on layer 'controls'

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Regina Henschel 2021-02-10 12:18:24 UTC
A unit test for the case of drag-creating a form control is missing. But I cannot write it, see my mail on dev-list 2021-02-09.
Comment 4 Commit Notification 2021-02-16 20:39:04 UTC
Regina Henschel committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ae2e7a2a7f9fc56f0388b823a6e35111c4005619

tdf#140252 unit test Controls in Calc are always on layer 'controls'

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Regina Henschel 2021-02-16 20:46:36 UTC
Missing unit test is added now.