sc/source/core/data/drwlayer.cxx
@@ -283,10 +283,9 @@ ScDrawLayer::ScDrawLayer( ScDocument* pDocument, const OUString& rName ) :
     rAdmin.NewLayer("vorne",    sal_uInt8(SC_LAYER_FRONT));
     rAdmin.NewLayer("hinten",   sal_uInt8(SC_LAYER_BACK));
     rAdmin.NewLayer("intern",   sal_uInt8(SC_LAYER_INTERN));
-    rAdmin.NewLayer("Controls", sal_uInt8(SC_LAYER_CONTROLS));
-    rAdmin.SetControlLayerName("Controls");
+    // tdf#140252 use same name as in ctor of SdrLayerAdmin
+    rAdmin.NewLayer(rAdmin.GetControlLayerName(), sal_uInt8(SC_LAYER_CONTROLS));
     rAdmin.NewLayer("hidden",   sal_uInt8(SC_LAYER_HIDDEN));
-    // "Controls" is new - must also be created when loading
 
     // Set link for URL-Fields
     ScModule* pScMod = SC_MOD();
