sc/qa/unit/scshapetest.cxx
@@ -16,10 +16,12 @@
 #include <comphelper/propertyvalue.hxx>
 #include <sfx2/dispatch.hxx>
 #include <sfx2/request.hxx>
+#include <svl/intitem.hxx>
 #include <svx/svdoashp.hxx>
 #include <svx/svdomeas.hxx>
 #include <svx/svdpage.hxx>
 #include <svx/svdorect.hxx>
+#include <svx/svdouno.hxx>
 #include <unotools/tempfile.hxx>
 #include <vcl/keycodes.hxx>
 
@@ -40,6 +42,7 @@ public:
     ScShapeTest();
     void saveAndReload(css::uno::Reference<css::lang::XComponent>& xComponent,
                        const OUString& rFilter);
+    void testTdf140252_LayerOfControl();
     void testTdf137082_LTR_to_RTL();
     void testTdf137082_RTL_cell_anchored();
     void testTdf137081_RTL_page_anchored();
@@ -63,6 +66,7 @@ public:
     void testCustomShapeCellAnchoredRotatedShape();
 
     CPPUNIT_TEST_SUITE(ScShapeTest);
+    CPPUNIT_TEST(testTdf140252_LayerOfControl);
     CPPUNIT_TEST(testTdf137082_LTR_to_RTL);
     CPPUNIT_TEST(testTdf137082_RTL_cell_anchored);
     CPPUNIT_TEST(testTdf137081_RTL_page_anchored);
@@ -190,6 +194,40 @@ static SdrObject* lcl_getSdrObjectWithAssert(ScDocument& rDoc, sal_uInt16 nObjNu
     OString sMsg = "no Object " + OString::number(nObjNumber);
     CPPUNIT_ASSERT_MESSAGE(sMsg.getStr(), pObj);
     return pObj;
+}
+
+void ScShapeTest::testTdf140252_LayerOfControl()
+{
+    // Error was, that a newly inserted control shape was put on layer
+    // "vorne" instead of layer "control".
+    // Load an empty document.
+    OUString aFileURL;
+    createFileURL(u"ManualColWidthRowHeight.ods", aFileURL);
+    uno::Reference<css::lang::XComponent> xComponent = loadFromDesktop(aFileURL);
+    CPPUNIT_ASSERT(xComponent.is());
+
+    // Get ScDocShell
+    ScDocShell* pDocSh = lcl_getScDocShellWithAssert(xComponent);
+
+    // Create default push button
+    SfxUInt16Item aIdentifierItem(SID_FM_CONTROL_IDENTIFIER, OBJ_FM_BUTTON);
+    SfxUInt32Item aInventorItem(SID_FM_CONTROL_INVENTOR, sal_uInt32(SdrInventor::FmForm));
+    const SfxPoolItem* pArgs[] = { &aIdentifierItem, &aInventorItem, nullptr };
+    const SfxPoolItem* pInternalArgs[] = { nullptr };
+    ScTabViewShell* pTabViewShell = lcl_getScTabViewShellWithAssert(pDocSh);
+    pTabViewShell->GetViewData().GetDispatcher().Execute(
+        SID_FM_CREATE_CONTROL, SfxCallMode::SYNCHRON, pArgs, KEY_MOD1, pInternalArgs);
+
+    // Get document and newly created push button.
+    ScDocument& rDoc = pDocSh->GetDocument();
+    SdrObject* pObj = lcl_getSdrObjectWithAssert(rDoc, 0);
+
+    // Check LayerID of object. Without the fix in place it was 0.
+    sal_uInt8 nExpectedID = sal_uInt8(SC_LAYER_CONTROLS);
+    sal_uInt8 nActualID = pObj->GetLayer().get();
+    CPPUNIT_ASSERT_EQUAL(nExpectedID, nActualID);
+
+    pDocSh->DoClose();
 }
 
 void ScShapeTest::testTdf137082_LTR_to_RTL()
